bkp/frontend-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-canary
  namespace: socialecho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: canary
  template:
    metadata:
      labels:
        app: frontend
        version: canary
    spec:
      nodeSelector:
        app: frontend
        version: canary
      containers:
      - name: frontend
        image: kvikash668/frontend:15
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: socialecho
spec:
  selector:
    app: frontend
    version: canary
  ports:
    - port: 80
      targetPort: 80
