bkp/frontend-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-stable
  namespace: socialecho
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      nodeSelector:
        app: frontend
      containers:
      - name: frontend
        image: kvikash668/frontend:02
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: socialecho
spec:
  selector:
    app: frontend
    version: v1
  ports:
    - port: 80
      targetPort: 80
