bkp/mongo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: socialecho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      nodeSelector:
        app: database
      containers:
      - name: mongo
        image: mongo:6
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: socialecho
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
