bkp/node-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: socialecho
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        app: backend
      containers:
      - name: backend
        image: kvikash668/backend:02
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: socialecho
spec:
  selector:
    app: backend
  ports:
    - port: 4000
      targetPort: 4000
